data/derived/comb/progs/unify/prog2848.ml.out
Characters 68-90:
  digitsOfInt (n mod 10) :: digitsOfInt(n / 10) :: [];;
  ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
